// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDropdown it renders correctly 1`] = `
<div
  data-sk-name="dropdown-reference"
>
  <button
    class="sked-button sked-button--secondary"
  >
    <div
      class="sk-visible"
    >
      Button dropdown
      <svg
        class="sk-flex-no-shrink sk-fill-current sk-ml-2"
        height="8"
        viewBox="0 0 18 11.17"
        width="8"
      >
        <path
          d="M.62.63A2.18 2.18 0 0 0 .7 3.75l6.71 6.75a2.23 2.23 0 0 0 3.18 0l6.71-6.75a2.18 2.18 0 0 0 .08-3.12 2.16 2.16 0 0 0-3.11.07L9 6 3.73.7A2.15 2.15 0 0 0 .62.63z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`ButtonDropdown it renders with compact prop 1`] = `
<div
  data-sk-name="dropdown-reference"
>
  <button
    class="sked-button sked-button--secondary sked-button--compact"
  >
    <div
      class="sk-visible"
    >
      Button dropdown
      <svg
        class="sk-flex-no-shrink sk-fill-current sk-ml-2"
        height="8"
        viewBox="0 0 18 11.17"
        width="8"
      >
        <path
          d="M.62.63A2.18 2.18 0 0 0 .7 3.75l6.71 6.75a2.23 2.23 0 0 0 3.18 0l6.71-6.75a2.18 2.18 0 0 0 .08-3.12 2.16 2.16 0 0 0-3.11.07L9 6 3.73.7A2.15 2.15 0 0 0 .62.63z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;
